# predicated_tree

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build_setup.sh  class_accessor.html  class_comparator.html  class_detangled_accessor.html  class_detangled_comparator.html  class_detangled_format.html  class_detangled_gardener-2.html  class_detangled_gardener.html  class_detangled_has_less.html  class_detangled_has_lt.html  class_detangled_has_taller.html  class_detangled_heap_iterator.html  class_detangled_iterator.html  class_detangled_mutator.html  class_detangled_predicated_tree.html  class_detangled_raw_tree.html  class_detangled_traverser-2.html  class_detangled_traverser-3.html  class_detangled_traverser-4.html  class_detangled_traverser.html  class_detangled_valid_predicate.html  class_detangled_virtual_accessor.html  class_format.html  class_has_lt.html  class_iterator.html  class_mutator.html  class_predicated_tree.html  class_raw_tree.html  class_traverser-2.html  class_traverser-3.html  class_traverser-4.html  class_traverser.html  class_virtual_accessor.html  conanfile.py  conanfile.txt  (+29 more)
_static/: documentation_options.js
benchmark/: CMakeLists.txt  predicated_tree.cpp  raw_tree.cpp
cmake/: FindDoxyrest.cmake  FindSphinx.cmake
doc/: CMakeLists.txt  conf.py  doxyrest-config.lua  index.md  installation.md  mainpage.md  special.md  tutorial.md  wrapper.sh
include/: CMakeLists.txt  tree.h
include/predicated_tree/: algorithm.h  comparator.h  comparator.hh  gardener.h  heap_iterator.h  mutator.h  predicated_tree.h  predicated_tree.hh
include/predicated_tree/impl/: algorithm.hh  comparator.hh  gardener.hh  heap_iterator.hh  mutator.hh  predicated_tree.hh
include/predicated_tree/util/: predicates.h  type_traits.h
include/predicated_tree/util/impl/: predicates.hh
include/tree/: accessor.h  accessor.hh  comparator.h  comparator.hh  enums.h  iterator.h  iterator.hh  mutator.h  mutator.hh  node.h  node.hh  predicated_tree.h  predicated_tree.hh  raw_tree.h  raw_tree.hh  raw_tree_iterator.h  raw_tree_iterator.hh  traverser.h  traverser.hh  tree.h  tree.hh  virtual_accessor.h  virtual_accessor.hh
include/tree/impl/: accessor.hh  enums.hh  iterator.hh  raw_tree.hh  traverser.hh  virtual_accessor.hh
include/tree/util/: format.h  format.hh  predicates.h  predicates.hh
include/tree/util/impl/: format.hh
src/tree/: CMakeLists.txt  predicated_tree.cpp
test/: CMakeLists.txt  container_test.cpp  gardener.cpp  mutator.cpp  mutator_test.cpp  predicated_tree.cpp  predicated_tree_bm_test.cpp  raw_tree.cpp  raw_tree.h  raw_tree.hh  raw_tree_test.cpp  raw_tree_test.h  raw_tree_test.hh
