find_package(Doxygen REQUIRED)
set(DOCUMENTATION_MAIN_PAGE ${CMAKE_CURRENT_SOURCE_DIR}/index.md)

set(DOXYGEN_CASE_SENSE_NAMES NO)
set(DOXYGEN_DOT_MULTI_TARGETS NO)
set(DOXYGEN_EXCLUDE_PATTERNS "*/catch2/*")
set(DOXYGEN_EXTRACT_ALL YES)
set(DOXYGEN_GENERATE_HTML NO)
set(DOXYGEN_GENERATE_XML YES)
set(DOXYGEN_HAVE_DOT NO)
set(DOXYGEN_MULTILINE_CPP_IS_BRIEF YES)
set(DOXYGEN_PROJECT_NAME "Predicated Tree")
set(DOXYGEN_QUIET YES)
set(DOXYGEN_USE_MDFILE_AS_MAINPAGE ${DOCUMENTATION_MAIN_PAGE})
set(DOXYGEN_XML_OUTPUT _xml)
set(DOXYGEN_WARNINGS NO)

# TODO(ghochee): This following option is not picked up by cmake correctly.
set(DOXYGEN_CLANG_ASSISTED_PARSING YES)

doxygen_add_docs(doxygen_docs
    ${CMAKE_SOURCE_DIR}/include
    ${DOCUMENTATION_MAIN_PAGE}
    COMMENT "Generating API documentation with doxygen")
